# neural-audio

./: .gitignore  README.md  pyproject.toml
demos/: stt_demo.py  tts_demo.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.js
simple-vad-demo/: README.md  start-demo.sh
simple-vad-demo/backend/: README.md  main.py  pyproject.toml  start.sh
simple-vad-demo/backend/api/: health.py  websocket.py
simple-vad-demo/backend/models/: messages.py
simple-vad-demo/backend/services/: audio_service.py  connection_service.py  vad_processor.py  vad_service.py
simple-vad-demo/frontend/: README.md  package-lock.json  package.json  start.sh
simple-vad-demo/frontend/src/: useAudioCapture.ts  useWebSocket.ts
simple-vad-demo/frontend/src/app/: layout.tsx  page.tsx
vanilla-vad/: index.html
